feat(index.html): add tags to <head>
SPA so no need for React Helmet or the likes here

--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pokemems</title>
+    <title>Test your memory | Pokémems</title>
+    <meta
+      name="description"
+      content="Test your memory with a blast of nostalgia from the past! Select a Pokémon, but make sure to not select the same one again. Set a high score and then try to beat it. Free-to-play right in your browser."
+    />
+    <meta
+      name="keywords"
+      content="pokemems,pokemon game,pokemems game,memory game,online game,fun online game,free online game,free browser game,free game,online game,fun game,pokemon game"
+    />
+    <link rel="canonical" href="https://poke-mems.netlify.app/" />
+    <meta
+      property="og:title"
+      content="Pokémems | Test your memory with a fun and free-to-play game"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://poke-mems.netlify.app/" />
+    <meta property="og:image" content="/images/screenshot.png" />
+    <meta
+      property="og:description"
+      content="Test your memory with a blast of nostalgia from the past! Select a Pokémon, but make sure to not select the same one again. Set a high score and then try to beat it. Free-to-play right in your browser."
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="https://poke-mems.netlify.app/" />
+    <meta
+      name="twitter:title"
+      content="Pokémems | Test your memory with a fun and free-to-play game"
+    />
+    <meta name="twitter:creator" content="Henry Lin" />
+    <meta
+      name="twitter:description"
+      content="Test your memory with a blast of nostalgia from the past! Select a Pokémon, but make sure to not select the same one again. Set a high score and then try to beat it. Free-to-play right in your browser."
+    />
+    <meta name="twitter:image" content="/images/screenshot.png" />
+    Links 🔗
   </head>
   <body>
     <div id="root"></div>
