feat(index.html): add favicon

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       content="pokemems,pokemon game,pokemems game,memory game,online game,fun online game,free online game,free browser game,free game,online game,fun game,pokemon game"
     />
     <link rel="canonical" href="https://poke-mems.netlify.app/" />
+
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- SOCIALS -->
     <meta
       property="og:title"
       content="Pokémems | Test your memory with a fun and free-to-play game"
@@ -36,7 +44,6 @@
       content="Test your memory with a blast of nostalgia from the past! Select a Pokémon, but make sure to not select the same one again. Set a high score and then try to beat it. Free-to-play right in your browser."
     />
     <meta name="twitter:image" content="/images/screenshot.png" />
-    Links 🔗
   </head>
   <body>
     <div id="root"></div>
